# pybcn-meetup-pbt

./: LICENSE  README.md  festa_major.py  pyproject.toml
tests/: test_festa_major.py
