[tool.poetry]
name = "pybcn-meetup-pbt"
version = "0.1.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
hypothesis = "^6.24.4"
mypy = "^0.910"
black = "^21.10b0"
mutmut = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
